refactor to can send notification on header to show the porcent on front, add module products to can make a sale
